Some changes with output and testing

--- a/20201119_1/data/2.in
+++ b/20201119_1/data/2.in
@@ -1,3 +1,9 @@
+@deccount
+def fun1(a, b):
+    return a*2+b
+@deccount
+def fun2(x=1, y=2, z=3):
+    return x+y+z
 fun1(1,1)
 fun1(2,2)
 fun1("asd", "fasd")
@@ -5,4 +11,3 @@ fun2()
 fun2()
 fun1(1,0)
 fun2()
-
