--- a/20201119_2/data/1.in
+++ b/20201119_2/data/1.in
@@ -1,3 +1,5 @@
+class C:
+    num = Num()
 print(C().num)
 c, d = C(), C()
 c.num = d.num = 2
@@ -6,4 +8,3 @@ c.num = "qwerqwerqwer"
 print(c.num + d.num)
 d.num = range(10, 1000, 7)
 print(c.num + d.num)
-
