--- a/20210517_1/pyproject.toml
+++ b/20210517_1/pyproject.toml
@@ -1,4 +1,3 @@
 [build-system]
-requires = ["setuptools", "wheel", "build"]
+requires = ["pyfiglet", "setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
-
