--- a/20210517_1/setup.cfg
+++ b/20210517_1/setup.cfg
@@ -1,9 +1,12 @@
 [metadata]
-name = figproj
+name = solve
 version = 0.0.1
 
 [options]
-packages = figproj
-install_requires =
-        pyfiglet
+packages = solve
+include_package_data = True
+install_requires = 
+	pyfiglet
 
+[options.package_data]
+solve = */*/solve.mo
